--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -357,7 +357,7 @@ jobs:
             run: |
                 git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
                 git config --local user.name "github-actions[bot]"
-                git add METADATA_htr_united.yml
+                git add ${{env.GITHUB_REPOSITORY}}_METADATA_htr_united.yml
                 git commit -m "[Automatic] Update METADATA_htr_united.yml files" || echo "Nothing to update"
                 git push origin HEAD:main    
 
